--- a/visualizations.Rmd
+++ b/visualizations.Rmd
@@ -15,12 +15,14 @@ img {
 
 
 
-```{r, echo = FALSE, fit.align = 'center'}
+```{r, echo = FALSE, fit.align = 'center', message = FALSE}
+library(tidyverse)
+
 viz_paths <- here::here("static", "dataviz") %>%
   fs::dir_info() %>%
-  arrange(modification_time) %>%
-  pull(path) %>%
-  str_match("static/dataviz/.*") %>%
+  dplyr::arrange(modification_time) %>%
+  dplyr::pull(path) %>%
+  stringr::str_match("static/dataviz/.*") %>%
   `[`(,1) %>% 
   rev()
 
