--- a/about.Rmd
+++ b/about.Rmd
@@ -5,6 +5,7 @@ title: "Hi there!"
 ```{css}
 p {
   font-family: 'Adelle';
+  text-align: justify;
 }
 ```
 
@@ -12,9 +13,9 @@ I am a first year PhD student in Linguistics at the University of Pennsylvania, 
 
 I received my B.A. in Linguistics from Northwestern University ('20), where I worked with [Jennifer Cole](https://sites.northwestern.edu/cole/), [Masaya Yoshida](https://faculty.wcas.northwestern.edu/~myo507/), and [Annette D'Onofrio](https://faculty.wcas.northwestern.edu/~akd2621/). I also worked as a research assistant in the [Language, Education, and Learning Neuroscience Lab](https://learnlab.northwestern.edu/) under [Elizabeth Norton](https://www.communication.northwestern.edu/faculty/ElizabethNorton) in the Communication Sciences and Disorders Department. I wrote my honors thesis on the role of prosodic focus in semantic reanalysis in the processing of sentences with local attachment ambiguity.
 
-Beyond linguistics research, I have interests in data visualization, science communication, and the R programming language. I'm especially passionate about explanatory data visualization in academic research and spend a lot of time thinking about best practices for readability and accessibility.
+Beyond linguistics research, I have interests in data visualization, science communication, literate programming, and the R language. I'm especially passionate about explanatory data visualization in academic research and spend a lot of time thinking about best practices for readability and accessibility.
 
 I'm also a [MindCORE](https://mindcore.sas.upenn.edu/) affiliate and work as a data science tutor for researchers at Penn. You can [schedule an appointment](https://rb.gy/gfhd2f) with me if you have questions related to R and/or data visualization.
 
 <br>
-<div style='text-align: center'><span class="sc">contact me:</span> yj{<i>last_name</i>}@sas.upenn.edu</div>
+<div style='text-align: center'><span class="sc">contact me:</span> yj{<i>last_name</i>}\@sas.upenn.edu</div>
