--- a/about.Rmd
+++ b/about.Rmd
@@ -15,7 +15,7 @@ d-article {
 
 I am a first year PhD student in Linguistics at the University of Pennsylvania, specializing in (computational) psycholinguistics. My main research interest is in modeling how comprehenders parse linguistic input, both in real time and over the course of development.
 
-I received my B.A. in Linguistics from Northwestern University ('20), where I worked with [Jennifer Cole](https://sites.northwestern.edu/cole/), [Masaya Yoshida](https://faculty.wcas.northwestern.edu/~myo507/), and [Annette D'Onofrio](https://faculty.wcas.northwestern.edu/~akd2621/). I also worked as a research assistant in the [Language, Education, and Learning Neuroscience Lab](https://learnlab.northwestern.edu/) under [Elizabeth Norton](https://www.communication.northwestern.edu/faculty/ElizabethNorton) in the Communication Sciences and Disorders Department. I wrote my honors thesis on the role of prosodic focus in semantic reanalysis in the processing of sentences with local attachment ambiguity.
+I received my B.A. in Linguistics from Northwestern University ('20), where I worked with [Jennifer Cole](https://sites.northwestern.edu/cole/), [Masaya Yoshida](https://faculty.wcas.northwestern.edu/~myo507/), and [Annette D'Onofrio](https://faculty.wcas.northwestern.edu/~akd2621/). I also worked as a research assistant in the [Language, Education, and Reading Neuroscience Lab](https://learnlab.northwestern.edu/) under [Elizabeth Norton](https://www.communication.northwestern.edu/faculty/ElizabethNorton) in the Communication Sciences and Disorders Department. I wrote my honors thesis on the role of prosodic focus in semantic reanalysis in the processing of sentences with local attachment ambiguity.
 
 Beyond linguistics research, I have interests in data visualization, science communication, literate programming, and the R language. I'm especially passionate about explanatory data visualization in academic research and spend a lot of time thinking about best practices for readability and accessibility.
 
