--- a/_posts/2020-06-07-correlation-parameter-mem/correlation-parameter-mem.Rmd
+++ b/_posts/2020-06-07-correlation-parameter-mem/correlation-parameter-mem.Rmd
@@ -5,6 +5,7 @@ description: |
 categories:
   - statistics
   - mixed-effects models
+  - tutorial
 base_url: https://yjunechoe.github.io
 author:
   - name: June Choe
