--- a/_posts/2020-06-30-treemap-with-ggplot/2020-06-30-treemap-with-ggplot.Rmd
+++ b/_posts/2020-06-30-treemap-with-ggplot/2020-06-30-treemap-with-ggplot.Rmd
@@ -6,6 +6,7 @@ categories:
   - data visualization
   - treemap
   - ggplot2
+  - tutorial
 base_url: https://yjunechoe.github.io
 author:
   - name: June Choe
