plot makeover 2 raft

--- a/_posts/2020-10-18-rage-against-the-vertical-y-axis-title/rage-against-the-vertical-y-axis-title.Rmd
+++ b/_posts/2020-10-18-rage-against-the-vertical-y-axis-title/rage-against-the-vertical-y-axis-title.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Rage against the vertical y-axis title"
+title: "Rage against the y-axis"
 description: |
   Five alternatives to the default vertical y-axis title
 categories:
