--- a/_posts/2020-09-12-videos-in-reactable/2020-09-12-videos-in-reactable.Rmd
+++ b/_posts/2020-09-12-videos-in-reactable/2020-09-12-videos-in-reactable.Rmd
@@ -3,7 +3,7 @@ title: Embedding videos in {reactable} tables
 description: |
   Pushing the limits of expandable row details
 categories:
-  - reactable
+  - tables
   - data visualization
 base_url: https://yjunechoe.github.io
 author:
