--- a/news.Rmd
+++ b/news.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "News"
-description: |
-  Personal updates
 output:
   distill::distill_article:
     toc: false
@@ -16,6 +14,7 @@ d-article h2 {
 }
 
 d-article h3 {
+  font-size: 1.5em;
   text-align: center;
   font-variant: small-caps;
   font-family: Bitter;
@@ -36,16 +35,16 @@ li::marker {
 
 ### October
 
-- My [tutorial](https://yjunechoe.github.io/posts/2020-09-26-demystifying-stat-layers-ggplot2/) on stat_*() functions in {ggplot2} was featured as a weekly highlight on the [rweekly podcast](https://rweekly.fireside.fm/8?t=251), which curates weekly updates from the R community
+- My [tutorial](https://yjunechoe.github.io/posts/2020-09-26-demystifying-stat-layers-ggplot2/) on stat_*() functions in {ggplot2} was **featured as a weekly highlight** on the [rweekly podcast](https://rweekly.fireside.fm/8?t=251), which curates weekly updates from the R community
 
-- I became a data science tutor for [MindCORE](https://mindcore.sas.upenn.edu/) to help researchers at Penn with issues related to data visualization and R programming.
+- I became a **data science tutor** at [MindCORE](https://mindcore.sas.upenn.edu/) to help researchers at Penn with issues related to data visualization and R programming.
 
 ### September
 
-- I have moved to Philly to start my PhD in Linguistics at the University of Pennsylvania!
+- **I have moved to Philly to start my PhD in Linguistics at the University of Pennsylvania!**
 
-- I presented a poster at the AMLaP conference on my undergrad thesis research, advised by Professors Jennifer Cole and Masaya Yoshida.
+- I presented a **poster at AMLaP** on my undergrad thesis research, advised by Professors Jennifer Cole and Masaya Yoshida.
 
 ### June
 
-- I graduated from Northwestern University with a B.A. in Linguistics! I was also appointed as the Senior Marshal for Linguistics (though missed out on the chance to carry a banner representing the major at graduation)
+- **I graduated from Northwestern University with a B.A. in Linguistics!** I was also appointed as the Senior Marshal for Linguistics (though missed out on the chance to carry a banner representing the major at graduation)
